--- a/server/envs/neutrino.regtest.env
+++ b/server/envs/neutrino.regtest.env
@@ -7,6 +7,8 @@ ARK_VTXO_TREE_EXPIRY= 604672
 ARK_UNILATERAL_EXIT_DELAY=1024
 ARK_BOARDING_EXIT_DELAY=604672
 ARK_ESPLORA_URL=http://chopsticks:3000
+ARK_WALLET_ADDR=arkd-wallet:6060
 
-ARK_BTC_WALLET_ESPLORA_URL=http://chopsticks:3000
-ARK_BTC_WALLET_NEUTRINO_PEER=bitcoin:18444
+ARK_WALLET_ESPLORA_URL=http://chopsticks:3000
+ARK_WALLET_NEUTRINO_PEER=bitcoin:18444
+ARK_WALLET_DATADIR=/app/wallet-data
