--- a/server/envs/neutrino.mutinynet.env
+++ b/server/envs/neutrino.mutinynet.env
@@ -6,6 +6,8 @@ ARK_BOARDING_EXIT_DELAY = 604672
 ARK_NETWORK=mutinynet
 ARK_DATADIR=./data/mutinynet
 ARK_ESPLORA_URL=https://mutinynet.com/api
+ARK_WALLET_ADDR=arkd-wallet:6060
 
-ARK_BTC_WALLET_ESPLORA_URL=https://mutinynet.com/api
-ARK_BTC_WALLET_NEUTRINO_PEER=45.79.52.207:38333
+ARK_WALLET_ESPLORA_URL=https://mutinynet.com/api
+ARK_WALLET_NEUTRINO_PEER=45.79.52.207:38333
+ARK_WALLET_DATADIR=/app/wallet-data
