--- a/pkg/ark-wallet/Makefile
+++ b/pkg/ark-wallet/Makefile
@@ -1,12 +1,28 @@
-.PHONY: vet run
+.PHONY: proto proto-lint vet run run-neutrino
+
+define setup_env
+    $(eval include $(1))
+    $(eval export)
+endef
 
 vet:
 	@echo "Running go vet..."
 	go vet ./...
 
-run:
+run-neutrino:
 	@echo "Running btc-wallet service..."
-	ARK_WALLET_NETWORK=regtest \
-	ARK_WALLET_ESPLORA_URL=http://localhost:3000 \
-	ARK_WALLET_NEUTRINO_PEER=localhost:18444 \
-	go run ./cmd/main.go
+	$(call setup_env, envs/neutrino.regtest.env)
+	go run ./cmd
+
+
+## run: run arkd in dev mode with bitcoind on regtest
+run-bitcoind:
+	@echo "Running arkd with Bitcoin Core in dev mode on regtest ..."
+	$(call setup_env, envs/bitcoind.regtest.env)
+	go run ./cmd
+
+## run-neutrino-mutinynet: run arkd in dev mode with neutrino on mutinynet
+run-neutrino-mutinynet:
+	@echo "Running arkd with Neutrino in dev mode on mutinynet ..."
+	$(call setup_env, envs/neutrino.mutinynet.env)
+	go run ./cmd
