--- a/.github/workflows/ark.integration.yaml
+++ b/.github/workflows/ark.integration.yaml
@@ -26,6 +26,9 @@ jobs:
       - name: Run Nigiri
         uses: vulpemventures/nigiri-github-action@v1
 
+      - name: Run Arkd and Arkd Wallet
+        run: make docker-run
+        working-directory: ..
+
       - name: integration testing
         run: make integrationtest
-  
