--- a/.github/workflows/ark.integration.yaml
+++ b/.github/workflows/ark.integration.yaml
@@ -27,8 +27,7 @@ jobs:
         uses: vulpemventures/nigiri-github-action@v1
 
       - name: Run Arkd and Arkd Wallet
-        run: make docker-run
-        working-directory: ..
+        run: make -C .. docker-run
 
       - name: integration testing
         run: make integrationtest
