--- a/docker-compose.regtest.yml
+++ b/docker-compose.regtest.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "6060:6060"
     environment:
-      - ARK_WALLET_ESPLORA_URL=http://bitcoin:3000
+      - ARK_WALLET_ESPLORA_URL=http://chopsticks:3000
       - ARK_WALLET_NEUTRINO_PEER=bitcoin:18444
       - ARK_WALLET_DATADIR=./data/regtest
       - ARK_WALLET_NETWORK=regtest
