--- a/docker-compose.regtest.yml
+++ b/docker-compose.regtest.yml
@@ -29,12 +29,14 @@ services:
     environment:
       - ARK_LOG_LEVEL=5
       - ARK_NO_MACAROONS=true
-      - ARK_VTXO_TREE_EXPIRY=604672
+      - ARK_VTXO_TREE_EXPIRY=20
+      - ARK_SCHEDULER_TYPE=block
       - ARK_UNILATERAL_EXIT_DELAY=1024
       - ARK_BOARDING_EXIT_DELAY=604672
       - ARK_NETWORK=regtest
       - ARK_DATADIR=./data/regtest
       - ARK_WALLET_ADDR=arkd-wallet:6060
+      - ARK_ESPLORA_URL=http://chopsticks:3000
     volumes:
       - type: tmpfs
         target: /app/data
