Update gh actions

--- a/.github/workflows/ark.integration.yaml
+++ b/.github/workflows/ark.integration.yaml
@@ -31,3 +31,6 @@ jobs:
 
       - name: integration testing
         run: make integrationtest
+      
+      - name: Tear down
+        run: make -C .. docker-stop
