--- a/.github/workflows/ark.unit.yaml
+++ b/.github/workflows/ark.unit.yaml
@@ -79,7 +79,7 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.61
-          working-directory: ./pkg/client-sdk
+          working-directory: ./pkg
           args: --timeout 5m --skip-files=.*_test.go
       - name: check code integrity
         uses: securego/gosec@master
