--- a/.github/workflows/ark.integration.yaml
+++ b/.github/workflows/ark.integration.yaml
@@ -26,6 +26,11 @@ jobs:
       - name: Run Nigiri
         uses: vulpemventures/nigiri-github-action@v1
 
+      - name: Run Arkd and Arkd Wallet
+        run: make -C .. docker-run
+
       - name: integration testing
         run: make integrationtest
-  
+      
+      - name: Tear down
+        run: make -C .. docker-stop
