--- a/.github/workflows/ark.wasm_test.yaml
+++ b/.github/workflows/ark.wasm_test.yaml
@@ -33,5 +33,11 @@ jobs:
       - name: Run Nigiri
         uses: vulpemventures/nigiri-github-action@v1
 
+      - name: Start Docker services
+        run: make -C ../.. docker-run
+
       - name: wasm test
         run: make test-wasm
+
+      - name: Tear down
+        run: make -C ../.. docker-stop
