--- a/.github/workflows/ark.artifacts.yaml
+++ b/.github/workflows/ark.artifacts.yaml
@@ -1,4 +1,4 @@
-name: Build and Upload Binaries and WASM
+name: Build and Upload Binaries
 
 on:
   workflow_dispatch:
@@ -19,11 +19,6 @@ jobs:
     - name: Build binaries
       run: make build-all
 
-    - name: Build WASM SDK
-      run: |
-        cd pkg/client-sdk
-        make build-wasm
-
     - name: Upload server binaries
       uses: actions/upload-artifact@v4
       with:
@@ -42,14 +37,4 @@ jobs:
         if-no-files-found: error
         retention-days: 5
         compression-level: 6
-        overwrite: true
-
-    - name: Upload WASM SDK
-      uses: actions/upload-artifact@v4
-      with:
-        name: wasm-sdk
-        path: pkg/client-sdk/build
-        if-no-files-found: error
-        retention-days: 5
-        compression-level: 0
         overwrite: true
