Add build of ark sdk binary

--- a/.github/workflows/ark.artifacts.yaml
+++ b/.github/workflows/ark.artifacts.yaml
@@ -29,6 +29,16 @@ jobs:
         compression-level: 6
         overwrite: true
 
+    - name: Upload SDK binaries
+      uses: actions/upload-artifact@v4
+      with:
+        name: sdk-binaries
+        path: ./pkg/client-sdk/build
+        if-no-files-found: error
+        retention-days: 5
+        compression-level: 6
+        overwrite: true
+    
     - name: Upload client binaries
       uses: actions/upload-artifact@v4
       with:
