Drop wasm and descriptors (#562)
* Drop wasm

* Drop descriptor

* Drop ocean

* Drop descriptor

* Add build of ark sdk binary

* Go work sync

* Polish

--- a/.github/workflows/ark.artifacts.yaml
+++ b/.github/workflows/ark.artifacts.yaml
@@ -1,4 +1,4 @@
-name: Build and Upload Binaries and WASM
+name: Build and Upload Binaries
 
 on:
   workflow_dispatch:
@@ -19,11 +19,6 @@ jobs:
     - name: Build binaries
       run: make build-all
 
-    - name: Build WASM SDK
-      run: |
-        cd pkg/client-sdk
-        make build-wasm
-
     - name: Upload server binaries
       uses: actions/upload-artifact@v4
       with:
@@ -34,6 +29,16 @@ jobs:
         compression-level: 6
         overwrite: true
 
+    - name: Upload SDK binaries
+      uses: actions/upload-artifact@v4
+      with:
+        name: sdk-binaries
+        path: ./pkg/client-sdk/build
+        if-no-files-found: error
+        retention-days: 5
+        compression-level: 6
+        overwrite: true
+    
     - name: Upload client binaries
       uses: actions/upload-artifact@v4
       with:
@@ -42,14 +47,4 @@ jobs:
         if-no-files-found: error
         retention-days: 5
         compression-level: 6
-        overwrite: true
-
-    - name: Upload WASM SDK
-      uses: actions/upload-artifact@v4
-      with:
-        name: wasm-sdk
-        path: pkg/client-sdk/build
-        if-no-files-found: error
-        retention-days: 5
-        compression-level: 0
         overwrite: true
