--- a/pkg/ark-wallet/envs/neutrino.mutinynet.env
+++ b/pkg/ark-wallet/envs/neutrino.mutinynet.env
@@ -1,4 +1,5 @@
 ARK_WALLET_ESPLORA_URL=https://mutinynet.com/api
 ARK_WALLET_NEUTRINO_PEER=45.79.52.207:38333
-ARK_WALLET_DATADIR=./data/regtest
-ARK_WALLET_NETWORK=regtest
+ARK_WALLET_DATADIR=./data/mutinynet
+ARK_WALLET_NETWORK=mutinynet
+ARK_WALLET_LOG_LEVEL=5
