--- a/server/envs/regtest.env
+++ b/server/envs/regtest.env
@@ -3,6 +3,7 @@ ARK_NO_MACAROONS=true
 ARK_VTXO_TREE_EXPIRY=604672
 ARK_UNILATERAL_EXIT_DELAY=1024
 ARK_BOARDING_EXIT_DELAY=604672
-ARK_NETWORK=regtest
 ARK_DATADIR=./data/regtest
+ARK_ESPLORA_URL=http://localhost:3000
 ARK_WALLET_ADDR=localhost:6060
+ARK_ALLOW_ZERO_FEES=true
