--- a/pkg/ark-wallet/envs/bitcoind.regtest.env
+++ b/pkg/ark-wallet/envs/bitcoind.regtest.env
@@ -1,7 +1,9 @@
-ARK_WALLET_NETWORK=regtest
+ARK_WALLET_ESPLORA_URL=http://localhost:3000
 ARK_WALLET_BITCOIND_RPC_USER=admin1
 ARK_WALLET_BITCOIND_RPC_PASS=123
 ARK_WALLET_BITCOIND_RPC_HOST=localhost:18443
 ARK_WALLET_BITCOIND_ZMQ_BLOCK=tcp://127.0.0.1:28332
 ARK_WALLET_BITCOIND_ZMQ_TX=tcp://127.0.0.1:28333
 ARK_WALLET_DATADIR=./data/regtest
+ARK_WALLET_NETWORK=regtest
+ARK_WALLET_LOG_LEVEL=5
