--- a/pkg/ark-wallet/envs/neutrino.regtest.env
+++ b/pkg/ark-wallet/envs/neutrino.regtest.env
@@ -2,3 +2,4 @@ ARK_WALLET_ESPLORA_URL=http://localhost:3000
 ARK_WALLET_NEUTRINO_PEER=localhost:18444
 ARK_WALLET_DATADIR=./data/regtest
 ARK_WALLET_NETWORK=regtest
+ARK_WALLET_LOG_LEVEL=5
