--- a/server/Makefile
+++ b/server/Makefile
@@ -1,4 +1,4 @@
-.PHONY: build clean cov help intergrationtest lint run run-neutrino run-neutrino-mutinynet test vet
+.PHONY: build clean cov help intergrationtest lint run run-mutinynet test vet migrate sqlc
 
 define setup_env
     $(eval include $(1))
@@ -58,24 +58,9 @@ vet:
 	@echo "Running code analysis..."
 	@go vet ./...
 
-## mig_file: creates pg migration file(eg. make FILE=init mig_file)
-mig_file:
+## migrate: creates sqlite migration file(eg. make FILE=init mig_file)
+migrate:
 	@docker run --rm -v ./internal/infrastructure/db/sqlite/migration:/migration migrate/migrate create -ext sql -dir /migration $(FILE)
-
-## mig_up: creates db schema for provided db path
-mig_up:
-	@echo "creating db schema..."
-	@docker run --rm -v -database "sqlite://$(DB_PATH)/sqlite.db" -path ./internal/infrastructure/db/sqlite/migration/ up
-
-## mig_down: apply down migration
-mig_down:
-	@echo "migration down..."
-	@docker run --rm -v -database "sqlite://$(DB_PATH)/sqlite.db" -path ./internal/infrastructure/db/sqlite/migration/ down
-
-## mig_down_yes: apply down migration without prompt
-mig_down_yes:
-	@echo "migration down..."
-	@"yes" | docker run --rm -v -database "sqlite://path/to/database" -path ./internal/infrastructure/db/sqlite/migration/ down
 
 ## sqlc: gen sql
 sqlc:
