--- a/docker-compose.regtest.yml
+++ b/docker-compose.regtest.yml
@@ -11,7 +11,7 @@ services:
       - ARK_LOG_LEVEL=5
       - ARK_VTXO_TREE_EXPIRY=20
       - ARK_TX_BUILDER_TYPE=covenantless
-      - ARK_ESPLORA_URL=http://chopsticks:3000
+      - ARK_ESPLORA_URL=http://host.docker.internal:3000
       - ARK_NEUTRINO_PEER=bitcoin:18444
       - ARK_SCHEDULER_TYPE=block
       - ARK_NO_TLS=true
