--- a/server/envs/mutinynet.env
+++ b/server/envs/mutinynet.env
@@ -7,3 +7,4 @@ ARK_DATADIR=./data/mutinynet
 ARK_ESPLORA_URL=https://mutinynet.com/api
 ARK_WALLET_ADDR=localhost:6060
 ARK_ALLOW_ZERO_FEES=true
+ARK_DB_URL=postgresql://root:secret@127.0.0.1:5432/ark-db?sslmode=disable
