--- a/.github/workflows/ark.unit.yaml
+++ b/.github/workflows/ark.unit.yaml
@@ -62,11 +62,11 @@ jobs:
       - name: Run go work sync
         run: go work sync
       - name: create pg db
-        run: make pg
+        run: make pgpgtest
       - name: unit testing
         run: make test
       - name: drop pg db
-        run: make droppg
+        run: make droppgtest
 
   test-sdk:
     name: sdk unit tests
