--- a/docker-compose.regtest.yml
+++ b/docker-compose.regtest.yml
@@ -35,7 +35,7 @@ services:
       - ARK_DATADIR=./data/regtest
       - ARK_WALLET_ADDR=arkd-wallet:6060
       - ARK_ESPLORA_URL=http://chopsticks:3000
-      - ARK_MIN_VTXO_AMOUNT=1
+      - ARK_VTXO_MIN_AMOUNT=1
     volumes:
       - type: tmpfs
         target: /app/data
