--- a/.github/workflows/ark.unit.yaml
+++ b/.github/workflows/ark.unit.yaml
@@ -61,8 +61,12 @@ jobs:
           args: '-severity high -quiet -exclude=G115 ./...'
       - name: Run go work sync
         run: go work sync
+      - name: create pg db
+        run: make pgtest
       - name: unit testing
         run: make test
+      - name: drop pg db
+        run: make droppgtest
 
   test-sdk:
     name: sdk unit tests
