--- a/server/envs/regtest.env
+++ b/server/envs/regtest.env
@@ -6,4 +6,4 @@ ARK_BOARDING_EXIT_DELAY=604672
 ARK_DATADIR=./data/regtest
 ARK_ESPLORA_URL=http://localhost:3000
 ARK_WALLET_ADDR=localhost:6060
-ARK_ALLOW_ZERO_FEES=true
+ARK_DB_URL=postgresql://root:secret@127.0.0.1:5432/ark-db?sslmode=disable
