--- a/docker-compose.regtest.yml
+++ b/docker-compose.regtest.yml
@@ -49,6 +49,7 @@ services:
       - ARK_WALLET_ADDR=arkd-wallet:6060
       - ARK_ESPLORA_URL=http://chopsticks:3000
       - ARK_DB_URL=postgresql://root:secret@ark-db-pg:5432/ark-db?sslmode=disable
+      - ARK_EVENT_DB_URL=postgresql://root:secret@ark-db-pg:5432/ark-event-db?sslmode=disable
       - ARK_VTXO_MIN_AMOUNT=1
     volumes:
       - type: tmpfs
