--- a/docker-compose.regtest.yml
+++ b/docker-compose.regtest.yml
@@ -1,15 +1,4 @@
 services:
-  ark-db-pg:
-    container_name: ark-db-pg
-    image: postgres
-    restart: unless-stopped
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: secret
-      POSTGRES_DB: ark-db
-
   arkd-wallet:
     build:
       context: .
@@ -34,7 +23,6 @@ services:
     restart: unless-stopped
     depends_on:
       - arkd-wallet
-      - ark-db-pg
     ports:
       - "7070:7070"
     environment:
@@ -48,7 +36,8 @@ services:
       - ARK_DATADIR=./data/regtest
       - ARK_WALLET_ADDR=arkd-wallet:6060
       - ARK_ESPLORA_URL=http://chopsticks:3000
-      - ARK_DB_URL=postgresql://root:secret@ark-db-pg:5432/ark-db?sslmode=disable
+      - ARK_DB_TYPE=sqlite
+      - ARK_EVENT_DB_TYPE=badger
       - ARK_VTXO_MIN_AMOUNT=1
     volumes:
       - type: tmpfs
