--- a/.github/workflows/ark.unit.yaml
+++ b/.github/workflows/ark.unit.yaml
@@ -63,10 +63,14 @@ jobs:
         run: go work sync
       - name: create pg db
         run: make pgtest
+      - name: create redis db
+        run: make redis
       - name: unit testing
         run: make test
       - name: drop pg db
         run: make droppgtest
+      - name: drop redis db
+        run: make dropredis
 
   test-sdk:
     name: sdk unit tests
