--- a/.github/workflows/ark.unit.yaml
+++ b/.github/workflows/ark.unit.yaml
@@ -64,13 +64,13 @@ jobs:
       - name: create pg db
         run: make pgtest
       - name: create redis db
-        run: make redis
+        run: make redis-up
       - name: unit testing
         run: make test
       - name: drop pg db
         run: make droppgtest
       - name: drop redis db
-        run: make dropredis
+        run: make redis-down
 
   test-sdk:
     name: sdk unit tests
