--- a/server/envs/dev.env
+++ b/server/envs/dev.env
@@ -6,6 +6,7 @@ ARK_BOARDING_EXIT_DELAY=604672
 ARK_DATADIR=./data/regtest
 ARK_ESPLORA_URL=http://localhost:3000
 ARK_WALLET_ADDR=localhost:6060
-ARK_DB_URL=postgresql://root:secret@127.0.0.1:5432/ark-db?sslmode=disable
 ARK_LIVE_STORE_TYPE=redis
+ARK_DB_URL=postgresql://root:secret@127.0.0.1:5432/projection?sslmode=disable
 ARK_EVENT_DB_URL=postgresql://root:secret@127.0.0.1:5432/event?sslmode=disable
+ARK_REDIS_URL=redis://localhost:6379/0
