Verify exit closures & Verify CSV in RegisterIntent

--- a/server/envs/dev.env
+++ b/server/envs/dev.env
@@ -7,3 +7,4 @@ ARK_DATADIR=./data/regtest
 ARK_WALLET_ADDR=localhost:6060
 ARK_DB_URL=postgresql://root:secret@127.0.0.1:5432/projection?sslmode=disable
 ARK_EVENT_DB_URL=postgresql://root:secret@127.0.0.1:5432/event?sslmode=disable
+ARK_ALLOW_CSV_BLOCK_TYPE=true
