[Server] Add LivesStore interface (#603)
* init

* live store, inmemory

* tmp

* tmp

* tmp

* temp

* tmp

* Fixes (#2)

* Fixes

* Uncomment TestMain

* Lint

* redis live store

* fix

* fix

* fix

* fix lint

* fix

* pr review

* fix

* fix

* fix

* fix

* fix

* fix

* Sync with next-version (#3)

* Support uint8 CLTV locktime (#610)

* Remove SIGNING_TYPE (keep sign branch only) (#617)

* remove signing_type

* fix nbCosigners

* cleaning

* Fixes

---------

Co-authored-by: louisinger <41042567+louisinger@users.noreply.github.com>

* Fix watchSessionCompleted

* Fix push intent retry

* Fix GetRoundStats pg query

---------

Co-authored-by: Pietralberto Mazza <18440657+altafan@users.noreply.github.com>
Co-authored-by: louisinger <41042567+louisinger@users.noreply.github.com>

--- a/.github/workflows/ark.unit.yaml
+++ b/.github/workflows/ark.unit.yaml
@@ -63,10 +63,14 @@ jobs:
         run: go work sync
       - name: create pg db
         run: make pgtest
+      - name: create redis db
+        run: make redis-up
       - name: unit testing
         run: make test
       - name: drop pg db
         run: make droppgtest
+      - name: drop redis db
+        run: make redis-down
 
   test-sdk:
     name: sdk unit tests
