--- a/server/envs/dev.env
+++ b/server/envs/dev.env
@@ -10,3 +10,4 @@ ARK_LIVE_STORE_TYPE=redis
 ARK_DB_URL=postgresql://root:secret@127.0.0.1:5432/projection?sslmode=disable
 ARK_EVENT_DB_URL=postgresql://root:secret@127.0.0.1:5432/event?sslmode=disable
 ARK_REDIS_URL=redis://localhost:6379/0
+ARK_ALLOW_CSV_BLOCK_TYPE=true
